[package]
name = "clobber"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
nvml-wrapper = {version = "0.9.0", features = ["legacy-functions"]}
pretty-bytes = "0.2.2"
sysinfo = "0.27.7"
users = "0.11.0"

[[bin]]
name = "clobber"
path = "src/clobber.rs"

[[bin]]
name = "clobberd"
path = "src/clobberd.rs"
