[package]
name = "clobber"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
nvml-wrapper = {version = "0.9.0", features = ["legacy-functions"]}
pretty-bytes = "0.2.2"
sysinfo = "0.27.7"
users = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
podman-api = "0.8"
tokio = {version = "1.25.0", features=["full"]}
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }

[[bin]]
name = "clobber"
path = "src/clobber.rs"

[[bin]]
name = "clobberd"
path = "src/clobberd.rs"
